--- a/public/graphdoc/index.html
+++ b/public/graphdoc/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link type="text/css" rel="stylesheet" href="./styles/graphdoc.css" />
-    <title>Graphql schema documentation</title>
+    <title>Did GraphQL Documentation</title>
     <link href="https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700" rel="stylesheet"><link type="text/css" rel="stylesheet" href="./assets/code.css" /><link type="text/css" rel="stylesheet" href="./assets/require-by.css" />
 </head>
 <body class="slds-scrollable--y">
@@ -276,7 +276,7 @@
     </div>
     <div class="container">
         
-        <h1 class="slds-text-heading--large">Graphql schema documentation</h1>
+        <h1 class="slds-text-heading--large">Did GraphQL Documentation</h1>
         <div class="slds-text-body--regular"></div>
     </div>
 </section>
