--- a/public/graphdoc/customerinput.doc.html
+++ b/public/graphdoc/customerinput.doc.html
@@ -277,7 +277,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">INPUT_OBJECT</p>
         <h1 class="slds-text-heading--large">CustomerInput</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>Input object for Customer</p>
+</div>
     </div>
 </section>
 <section>
