--- a/public/graphdoc/event.doc.html
+++ b/public/graphdoc/event.doc.html
@@ -277,7 +277,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">Event</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>A type that describes a TimeEntry</p>
+</div>
     </div>
 </section>
 <section>
@@ -299,7 +300,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="timesheetperiod.doc.html" title="TimesheetPeriod - ">TimesheetPeriod<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="timesheetperiod.doc.html" title="TimesheetPeriod - A type that describes a TimesheetPeriod">TimesheetPeriod<em>A type that describes a TimesheetPeriod</em></a><li></ul>
     </div>
 </section>
 <footer>
