--- a/public/graphdoc/customer.doc.html
+++ b/public/graphdoc/customer.doc.html
@@ -300,7 +300,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="event.doc.html" title="Event - ">Event<em></em></a><li><li><a href="project.doc.html" title="Project - ">Project<em></em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - ">TimeEntry<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="event.doc.html" title="Event - A type that describes a TimeEntry">Event<em>A type that describes a TimeEntry</em></a><li><li><a href="project.doc.html" title="Project - A type that describes a Project">Project<em>A type that describes a Project</em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - A type that describes a TimeEntry">TimeEntry<em>A type that describes a TimeEntry</em></a><li></ul>
     </div>
 </section>
 <footer>
