--- a/public/graphdoc/eventerror.doc.html
+++ b/public/graphdoc/eventerror.doc.html
@@ -299,7 +299,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="event.doc.html" title="Event - ">Event<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="event.doc.html" title="Event - A type that describes a TimeEntry">Event<em>A type that describes a TimeEntry</em></a><li></ul>
     </div>
 </section>
 <footer>
