--- a/public/graphdoc/float.doc.html
+++ b/public/graphdoc/float.doc.html
@@ -300,7 +300,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="event.doc.html" title="Event - ">Event<em></em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - ">TimeEntry<em></em></a><li><li><a href="timesheetperiod.doc.html" title="TimesheetPeriod - ">TimesheetPeriod<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="event.doc.html" title="Event - A type that describes a TimeEntry">Event<em>A type that describes a TimeEntry</em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - A type that describes a TimeEntry">TimeEntry<em>A type that describes a TimeEntry</em></a><li><li><a href="timesheetperiod.doc.html" title="TimesheetPeriod - A type that describes a TimesheetPeriod">TimesheetPeriod<em>A type that describes a TimesheetPeriod</em></a><li></ul>
     </div>
 </section>
 <footer>
