--- a/public/graphdoc/int.doc.html
+++ b/public/graphdoc/int.doc.html
@@ -300,7 +300,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="notification.doc.html" title="Notification - ">Notification<em></em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - ">TimeEntry<em></em></a><li><li><a href="timesheetperiod.doc.html" title="TimesheetPeriod - ">TimesheetPeriod<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="notification.doc.html" title="Notification - A type that describes a Notification">Notification<em>A type that describes a Notification</em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - A type that describes a TimeEntry">TimeEntry<em>A type that describes a TimeEntry</em></a><li><li><a href="timesheetperiod.doc.html" title="TimesheetPeriod - A type that describes a TimesheetPeriod">TimesheetPeriod<em>A type that describes a TimesheetPeriod</em></a><li></ul>
     </div>
 </section>
 <footer>
