--- a/public/graphdoc/project.doc.html
+++ b/public/graphdoc/project.doc.html
@@ -277,7 +277,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">Project</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>A type that describes a Project</p>
+</div>
     </div>
 </section>
 <section>
@@ -299,7 +300,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="event.doc.html" title="Event - ">Event<em></em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - ">TimeEntry<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="event.doc.html" title="Event - A type that describes a TimeEntry">Event<em>A type that describes a TimeEntry</em></a><li><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="timeentry.doc.html" title="TimeEntry - A type that describes a TimeEntry">TimeEntry<em>A type that describes a TimeEntry</em></a><li></ul>
     </div>
 </section>
 <footer>
