--- a/public/graphdoc/role.doc.html
+++ b/public/graphdoc/role.doc.html
@@ -277,7 +277,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">Role</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>A type that describes a Role</p>
+</div>
     </div>
 </section>
 <section>
@@ -299,7 +300,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="user.doc.html" title="User - ">User<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="query.doc.html" title="Query - ">Query<em></em></a><li><li><a href="user.doc.html" title="User - A type that describes a User">User<em>A type that describes a User</em></a><li></ul>
     </div>
 </section>
 <footer>
