--- a/public/graphdoc/timesheetperiod.doc.html
+++ b/public/graphdoc/timesheetperiod.doc.html
@@ -277,7 +277,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">OBJECT</p>
         <h1 class="slds-text-heading--large">TimesheetPeriod</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>A type that describes a TimesheetPeriod</p>
+</div>
     </div>
 </section>
 <section>
