Updated graphql doc

--- a/public/graphdoc/eventinput.doc.html
+++ b/public/graphdoc/eventinput.doc.html
@@ -210,11 +210,6 @@
                 NotificationTemplates
             </a>
         </li>
-        <li  title="OutlookCategoryInput">
-            <a href="outlookcategoryinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                OutlookCategoryInput
-            </a>
-        </li>
         <li  title="ProjectInput">
             <a href="projectinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 ProjectInput
@@ -277,7 +272,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">INPUT_OBJECT</p>
         <h1 class="slds-text-heading--large">EventInput</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>Input object for Event used in Mutation confirmPeriod</p>
+</div>
     </div>
 </section>
 <section>
@@ -299,7 +295,7 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="timesheetperiodinput.doc.html" title="TimesheetPeriodInput - ">TimesheetPeriodInput<em></em></a><li></ul>
+        <ul class="require-by"><li><a href="timesheetperiodinput.doc.html" title="TimesheetPeriodInput - Input object for TimesheetPeriod used in Mutation unconfirmPeriod">TimesheetPeriodInput<em>Input object for TimesheetPeriod used in Mutation unconfirmPeriod</em></a><li></ul>
     </div>
 </section>
 <footer>
