--- a/public/graphdoc/notificationtemplates.doc.html
+++ b/public/graphdoc/notificationtemplates.doc.html
@@ -210,11 +210,6 @@
                 NotificationTemplates
             </a>
         </li>
-        <li  title="OutlookCategoryInput">
-            <a href="outlookcategoryinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                OutlookCategoryInput
-            </a>
-        </li>
         <li  title="ProjectInput">
             <a href="projectinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 ProjectInput
@@ -277,7 +272,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">INPUT_OBJECT</p>
         <h1 class="slds-text-heading--large">NotificationTemplates</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>Input object for Notification template used in Query notifications</p>
+</div>
     </div>
 </section>
 <section>
@@ -299,10 +295,10 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="query.doc.html" title="Query - The Query type is a special type that defines the entry point of every 
-GraphQL query. Otherwise, the Query type is the same as any other 
-GraphQL object type, and its fields work exactly the same way.">Query<em>The Query type is a special type that defines the entry point of every 
-GraphQL query. Otherwise, the Query type is the same as any other 
+        <ul class="require-by"><li><a href="query.doc.html" title="Query - The Query type is a special type that defines the entry point of every
+GraphQL query. Otherwise, the Query type is the same as any other
+GraphQL object type, and its fields work exactly the same way.">Query<em>The Query type is a special type that defines the entry point of every
+GraphQL query. Otherwise, the Query type is the same as any other
 GraphQL object type, and its fields work exactly the same way.</em></a><li></ul>
     </div>
 </section>
