--- a/public/graphdoc/timeentryinput.doc.html
+++ b/public/graphdoc/timeentryinput.doc.html
@@ -210,11 +210,6 @@
                 NotificationTemplates
             </a>
         </li>
-        <li  title="OutlookCategoryInput">
-            <a href="outlookcategoryinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
-                OutlookCategoryInput
-            </a>
-        </li>
         <li  title="ProjectInput">
             <a href="projectinput.doc.html" class="slds-navigation-list--vertical__action slds-text-link--reset slds-truncate">
                 ProjectInput
@@ -277,7 +272,8 @@
     <div class="container">
         <p class="slds-text-title--caps slds-text-color--weak">INPUT_OBJECT</p>
         <h1 class="slds-text-heading--large">TimeEntryInput</h1>
-        <div class="slds-text-body--regular"></div>
+        <div class="slds-text-body--regular"><p>Input object for TimeEntry used in Mutation confirmPeriod</p>
+</div>
     </div>
 </section>
 <section>
@@ -299,12 +295,12 @@
             </a>
             Require by
         </h2>
-        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - The Mutation type is a special type that is used to modify server-side data. 
-Just like in queries, if the mutation field returns an object type, 
-you can ask for nested fields. It can also contain multiple fields. 
-However, unlike queries, mutation fields run in series, one after the other.">Mutation<em>The Mutation type is a special type that is used to modify server-side data. 
-Just like in queries, if the mutation field returns an object type, 
-you can ask for nested fields. It can also contain multiple fields. 
+        <ul class="require-by"><li><a href="mutation.doc.html" title="Mutation - The Mutation type is a special type that is used to modify server-side data.
+Just like in queries, if the mutation field returns an object type,
+you can ask for nested fields. It can also contain multiple fields.
+However, unlike queries, mutation fields run in series, one after the other.">Mutation<em>The Mutation type is a special type that is used to modify server-side data.
+Just like in queries, if the mutation field returns an object type,
+you can ask for nested fields. It can also contain multiple fields.
 However, unlike queries, mutation fields run in series, one after the other.</em></a><li></ul>
     </div>
 </section>
